fixed footer spacing

--- a/beta/news21skin.css
+++ b/beta/news21skin.css
@@ -88,7 +88,7 @@ display:block;
 	font-family:Verdana,Arial,Helvetica,Sans-Serif;
 }
 #news21-footer-bottom img{ vertical-align:middle; }
-#news21-footer-copy { padding-right:125px; }
+#news21-footer-copy { padding-right:105px; }
 #news21-footer-news21logo { padding-right:125px; }
 #news21-footer-carnegielogo { padding-right:20px; }
 #news21-footer-knightlogo { padding-right:10px; }
